# loadout

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  conftest.py  go.mod  go.sum  pyproject.toml
.claire/worktrees/story-002-attempt-1/loadout/: manifest.py
.claude/: notes.md
.claude/reviews/: 2026-04-15-critical-review-1.md  2026-04-15-critical-review-2.md  2026-04-15-critical-review-3.md  2026-04-15-critical-review-4.md  2026-04-15-critical-review-5.md
.github/workflows/: test.yml
cmd/loadout/: cmd_apply.go  cmd_capture.go  cmd_restore.go  cmd_root.go  cmd_status.go  cmd_validate.go  main.go
docs/: config-surface-area.md  critique-and-roadmap.md  design-notes.md
docs/plans/: 2026-03-04-loadout-mvp.md  plan_state.json  ralphael-plan.md
docs/plans/conflicts/: STORY-005.md
examples/token-miser/: AGENTS.md  manifest.yaml  settings.json
internal/apply/: apply.go  apply_test.go
internal/backup/: backup.go  backup_test.go
internal/capture/: capture.go  capture_test.go
internal/integration/: smoke_test.go
internal/manifest/: manifest.go  manifest_test.go
internal/paths/: paths.go  paths_test.go
internal/restore/: restore.go  restore_test.go
internal/secrets/: secrets.go  secrets_test.go
internal/state/: state.go  state_test.go
internal/status/: status.go  status_test.go
internal/validate/: validate.go  validate_test.go
loadout/: __main__.py  apply.py  backup.py  capture.py  cli.py  manifest.py  restore.py  secrets.py  state.py  status.py  validate.py
src/loadout/: __init__.py  __main__.py  apply.py  backup.py  capture.py  loadout_system.py  manifest.py  pack.py  paths.py  restore.py  secrets.py  state.py  status.py  validate.py
tests/: test_apply.py  test_apply_cmd.py  test_backup.py  test_bt.py  test_capture.py  test_loadout_clone_implementation.py  test_manifest.py  test_pack.py  test_restore.py  test_scaffold.py  test_secrets.py  test_state.py  test_status.py  test_validate.py
